# iam-sarif-report

./: .pre-commit-config.yaml  404.html  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  action.yaml  checks.json  generate_findings.sh  index.html  noxfile.py  policy.json  pyproject.toml  scrape_checks.py  setup.cfg
.github/workflows/: cd.yml  ci.yml  maintenance.yaml  release.yaml  test-action.yaml  test-sarif-upload.yaml  test.yaml  tox.yaml
iam_policy_validate_sarif/: __init__.py  checks.json  cli.py  converter.py  main.py  run.py  validator.py
iam_policy_validator_to_sarif/: cli.py  converter.py  definitions.py  handlers.py  reporter.py  service.py  validator.py
scripts/: entrypoint.sh  scrape_checks.py
src/iam_policy_validator_to_sarif/: bootstrap.py  checks.py  cli.py  commands.py  converter.py  definitions.py  handlers.py  reader.py  reporter.py  validator.py
src/iam_policy_validator_to_sarif/adapters/: checks.py  reader.py  reporter.py
src/iam_sarif_report/: __init__.py  bootstrap.py  checks.json  converter.py  definitions.py
src/iam_sarif_report/adapters/: checks.py  reader.py  reporter.py  validator.py
src/iam_sarif_report/domain/: commands.py  converter.py  definitions.py
src/iam_sarif_report/entrypoints/: cli.py
src/iam_sarif_report/service_layer/: bus.py  handlers.py
tests/: conftest.py  test_converter.py  test_main.py  test_url_reader.py
tests/data/: arn-account-not-allowed.policy.json  arn-region-not-allowed.policy.json.findings.sarif  data-type-mismatch.policy.json  data-type-mismatch.policy.json.findings  data_engineer.findings.json  data_engineer.sarif.json  duplicate-keys-with-different-case.policy.json  duplicate-keys-with-different-case.policy.json.findings  invalid-action.policy.json  invalid-action.policy.json.findings  invalid-arn-account.policy.json  invalid-arn-account.policy.json.findings  invalid-arn-prefix.policy.json  invalid-arn-prefix.policy.json.findings  invalid-arn-region.policy.json  invalid-arn-region.policy.json.findings
tests/data/policy_checks/: arn-region-not-allowed.policy.json  arn-region-not-allowed.policy.json.findings  arn-region-not-allowed.policy.json.findings.sarif  redundant-action.policy.json  redundant-action.policy.json.findings  redundant-action.policy.json.findings.sarif
tests/data/policy_checks/policies/: redundant-action.json  redundant-actioncopy.json
tests/data/policy_checks/sarif/: arn-region-not-allowed.policy.json.findings.sarif  arn-region-not-allowed.sarif  redundant-action.policy.json.findings.sarif  redundant-action.sarif
