[metadata]
name = iam_policy_validate_sarif
author = George Alton
author-email = georgealton@gmail.com
url = https://github.com/georgealton/iam_policy_validate_sarif
long_description = file: README.md
license = MIT
license_files = LICENSE

[options]
python_requires = >= 3.4
packages = iam_policy_validate_sarif
include_package_data = True
install_requires =
    click
    boto3
    sarif_om
    jschema_to_python

[options.package_data]
* = checks.json

[options.extras_require]
dev =
    black
    mypy
    pytest
    tox
    jsonschema
    isort
    mypy_boto3_accessanalyzer

scraper =
    beautifulsoup4
    requests
    html2text

[options.entry_points]
console_scripts =
    iam-policy-validator-to-sarif = iam_policy_validate_sarif.cli:validate_as_sarif
