[metadata]
name = iam_policy_validator_sarif
author = George Alton
author-email = georgealton@gmail.com
summary = Classes implementing the SARIF 2.1.0 object model.
home-page = https://github.com/georgealton/iam_policy_validate_sarif
description-file = README.md
license = MIT

[options]
python_requires = >= 3.4
install_requires =
    sarif_om

[files]
packages =
    sarif_om
    jschema_to_python

[options.extras_require]
dev =
    black
    mypy
    pytest
