[metadata]
name = iam_policy_validate_sarif
author = George Alton
author-email = georgealton@gmail.com
url = https://github.com/georgealton/iam_policy_validate_sarif
long_description = file: README.md
license = MIT
license_files = LICENSE
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Libraries :: Python Modules

[options]
python_requires = >= 3.7
package_dir=
    =src
packages=find:
include_package_data = True
install_requires =
    attrs
    boto3
    click
    jschema_to_python
    punq
    sarif_om

[options.packages.find]
where=src

[options.package_data]
* = checks.json

[options.extras_require]
dev =
    black
    mypy
    pytest
    tox
    jsonschema
    isort
    mypy_boto3_accessanalyzer
    types-setuptools

test =
    pytest
    jsonschema

scraper =
    beautifulsoup4
    requests
    html2text

[options.entry_points]
console_scripts =
    iam-policy-validator-to-sarif = iam_policy_validator_to_sarif.cli:generate_findings_and_report_sarif
